# join-holo

./: .gitignore  CNAME  README.md  export.py  generate.py  index.html  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
i18n/: en.yml  ja.yml
langs/: en.yaml
src/: static.py
static/css/: base.css  faq.css  index.css
static/js/: base.js  index.js
templates/: base.html  contact.html  faq.html  home.html  index.html  servers.html
